<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingTop="12dp"
              android:background="@color/action_bar_bg"
              android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/exit_tip"
        android:textSize="18sp"
        android:textColor="@color/white"/>
    <View android:layout_width="match_parent"
          android:layout_height="1px"
          android:layout_marginTop="12dp"
    android:background="#FFFEFEFE"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
                android:id="@+id/text_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center"
                android:text="@string/confirm"
                android:background="@drawable/button_bg"
                android:textSize="16sp"
                android:textColor="@color/white"
                />
        <View android:layout_width="1px"
              android:layout_height="match_parent"
              android:background="#FFFEFEFE"/>
        <TextView
                android:id="@+id/text_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/cancel"
                android:background="@drawable/button_bg"
                android:textSize="16sp"
                android:textColor="@color/white"
                />

        </LinearLayout>

</LinearLayout>